--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenidos a la Música Clásica</title>
-    <link rel="stylesheet" href="proyectisimo.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 
     <header>
-        <div class="container">
+        <div class="Cajas">
             <h1>Bienvenidos al Mundo de la Música Clásica</h1>
             <p>Explora y disfruta de las obras maestras de los compositores más grandes de la historia.</p>
         </div>
@@ -19,19 +19,20 @@
 
 
     <nav>
-        <div class="container">
+        <div class="Cajas">
             <a href="#inicio">Inicio</a>
-            <a href="#biografias">Biografías</a>
-            <a href="#musica">Música</a>
-            <a href="#eventos">Eventos</a>
-            <a href="#contacto">Contacto</a>
+            <a href="Biografia.html">Biografías</a>
+            <a href="musica.html">Música</a>
+            <a href="Eventos.html">Eventos</a>
+            <a href="Formulario.html">Contacto</a>
         </div>
     </nav>
 
 
     <main>
-        <section id="inicio" class="section">
-            <div class="container">
+        <section id="inicio" class="seccion">
+            <div class="Cajas">
+                <div class="evento">
                 <h2>¿Qué puedes encontrar aquí?</h2>
                 <p>En esta web podrás explorar una amplia gama de piezas de música clásica, incluyendo otras
                     inforaciones como:</p>
@@ -44,8 +45,9 @@
             </div>
         </section>
 
-        <section id="biografias" class="section">
-            <div class="container">
+        <section id="biografias" class="seccion">
+            <div class="Cajas">
+                <div class="evento">
                 <h2>Compositores Famosos</h2>
                 <p>Conoce a algunos de los compositores más destacados de la música clásica:</p>
                 <ul>
@@ -58,8 +60,9 @@
             </div>
         </section>
 
-        <section id="musica" class="section">
-            <div class="container">
+        <section id="musica" class="seccion">
+            <div class="Cajas">
+                <div class="evento">
                 <h2>Música Clásica</h2>
                 <p>Explora algunas de las piezas más célebres de la música clásica:</p>
                 <ul>
@@ -71,32 +74,38 @@
             </div>
         </section>
 
-        <section id="eventos" class="section">
-            <div class="container">
-                <h2>Próximos Eventos</h2>
+        <section id="eventos" class="seccion">
+            <div class="Cajas">
+                <div class="evento">
+                <h2><a href="Contenido.html"> Próximos Eventos </a>
+                </h2>
                 <p>Consulte los próximos conciertos y eventos de música clásica en su área:</p>
                 <ul>
 
                     <li>Suena con música tribute Quartet, Badajoz (20 diciembre)</li>
                     <li>Busker String Quartet, Badajoz (3 de enero de 2025)</li>
-                    </li>
+                    </li><br>
+                   
                 </ul>
             </div>
         </section>
 
-        <section id="contacto" class="section">
-            <div class="container">
+        <section id="contacto" class="seccion">
+            <div class="Cajas">
+                <div class="evento">
                 <h2>Contacto</h2>
                 <p>Si tienes alguna pregunta o necesitas más información, no dudes en contactar con nosotros.</p>
-                <p>Email: <a href="mailto:contacto@musicaclasica.com">buskerstringquartet@gmail.com</a></p>
+                <p>Email: <a href="buskerstringquartet@gmail.com">buskerstringquartet@gmail.com</a></p>
+                <a href="Formulario.html">Dudas quejas y sugerencias</a>
             </div>
         </section>
     </main>
 
 
     <footer>
-        <div class="container">
+        <div class="Cajas">
             <p>&copy; 2024 Música Clásica. Todos los derechos reservados.</p>
+            <img src="Imagenes/un logo con las iniciales JL y una clave musical.jpg" alt="Logo" class=" pie-imagen">
         </div>
     </footer>
 </body>
