--- a/Biografia.html
+++ b/Biografia.html
@@ -69,6 +69,23 @@
                 <p><strong>Biografía:</strong> Tchaikovsky fue un compositor ruso muy popular, conocido por su música emotiva y su capacidad para conectar con el público. Sus composiciones más conocidas incluyen el "Cascanueces", la "Obertura 1812" y la "Sinfonía No. 6, Patética". Sus obras siguen siendo interpretadas en teatros de todo el mundo.</p>
             </div>
         </section>
+
+        <section class="seccion">
+            <div class="Cajas">
+                <div class="evento">
+                <h2>Jose Luis Moreno</h2>
+                <p><strong>Fecha de nacimiento:</strong> 21 noviembre 1996</p>
+                <p><strong>Biografía:</strong> Sigue sus estudios musicales estudiando DAM </p>
+            </div>
+        </section>
+        <section class="seccion">
+            <div class="Cajas">
+                <div class="evento">
+                <h2>Sandra Moñino </h2>
+                <p><strong>Fecha de nacimiento:</strong> Hace años.....</p>
+                <p><strong>Biografía:</strong> Ex jugadora de baloncesto  </p>
+            </div>
+        </section>
     </main>
 
     <footer>
