--- a/Eventos.html
+++ b/Eventos.html
@@ -120,6 +120,24 @@
 
 
                 <div class="evento">
+                    <h3>Sinfonia llorante</h3>
+                    <p><strong>Fecha:</strong> SEPTIEMBRE</p>
+                    <p><strong>Ubicación:</strong> ies albarregas</p>
+                    <p><strong>Descripción:</strong> suspender defensa</p>
+                    <img src="Imagenes/llorar.jpeg" alt="realidad o ficcion" width="500" height="300">>
+                    <p><strong>Valoración:</strong> ★★★☆☆</p>
+                </div>
+
+                <div class="evento">
+                    <h3>Felicidad tras Aprobar</h3>
+                    <p><strong>Fecha:</strong> 10 de Enero de 2025</p>
+                    <p><strong>Ubicación:</strong> Merida</p>
+                    <p><strong>Descripción:</strong> Aprobar la defensa</p>
+                    <img src="Imagenes/aprobado.jpeg" alt="Concierto de Cuerdas Tchaikovsky" width="500" height="300">>
+                    <p><strong>Valoración:</strong> ★★★☆☆</p>
+                </div>
+
+                <div class="evento">
                     <h3>Concierto de Cuerdas - Tchaikovsky</h3>
                     <p><strong>Fecha:</strong> 10 de Enero de 2025</p>
                     <p><strong>Ubicación:</strong> Royal Albert Hall, Londres</p>
@@ -145,6 +163,7 @@
                             alt="Auditorio Nacional">
                         <p><strong>Valoración:</strong> ★★★★☆</p>
                 </div>
+
             </div>
         </section>
     </main>
