--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="musica.html">Música</a>
             <a href="Eventos.html">Eventos</a>
             <a href="Formulario.html">Contacto</a>
+            <a href="paginanueva.html">Enlace Nuevo</a>
         </div>
     </nav>
 
